# ai_course

./: .gitignore  HowLearnLLM.MD  Pipfile  README.md  pyproject.toml  requirements.txt
Tools/: matplotlin_notes.ipynb  numpy_notes.ipynb  pandas_notes.ipynb
chapter1/: lr_generated_data.ipynb  lr_housing_price.ipynb  lr_multi_from_scratch.ipynb
chapter2/: decision_boundary.ipynb  gradien_descent_logistic.ipynb  lab_utils_common.py  logistic_cost_func.ipynb  logistic_regression.py  logistic_sklearn.ipynb  utils_common.py
chapter2/chip_test/: week3_logistic_task2_chip-checkpoint.ipynb
chapter2/exam_pass/: week3_logistic_task1_exam-checkpoint.ipynb
chapter2/homework/: chapter3_task_data.csv  chapter3_task_data.ipynb
chapter3/: K_means.py  utils.py  week3-task.ipynb
chapter3/homework/: chapter4_task_data.csv  homework.ipynb
chapter3/ml_lab/: C3_W1_KMeans_Assignment-checkpoint.ipynb
chapter4/: decision_tree-checkpoint.ipynb  decision_tree.py
chapter4/lab_id3_tree/: id3_test.ipynb  test_id3.py
chapter4/task/: task5.ipynb
chapter5/course_code/: good_bad_classification_checkpoint.ipynb  temperature_rate_regression-checkpoint.ipynb
neural_network/: main.py  mnist_loader.py  network.py
