[tool.poetry]
name = "ai-course"
version = "0.1.0"
description = ""
authors = ["skywalkeryin <skywalkeryin007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
ipympl = "^0.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
