[project]
name = "ai-course"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "skywalkeryin", email = "skywalkeryin007@gmail.com" }
]
dependencies = [
    "scikit-learn>=1.5.2,<2.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "matplotlib>=3.9.2,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=2.1.2,<3.0.0",
    "ipympl>=0.9.4,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5,<7.0.0"
]

